packages/webassemblyjs/test/fixtures/conversions/type-errors/convert_u-f32-i32/module.wast
(module (func (result f32) (f32.convert_u/i32 (i64.const 0))))
